src/App.css
:root {
  font-size: 62.5%;
}

html {
  scroll-behavior: smooth;
}

.App {
  text-align: left;
  margin: 0;
  font-size: 2rem;
  font-family: 'hk_groteskregular', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0;
  max-width: var(--contentWidth);
  border-top: solid black 1px;
}

article {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0px;
  width: 80vw;
  padding-bottom: 4rem;
  margin-bottom: 6rem;
  border-bottom: solid black 1px;
  margin-top: 3rem;
}

section {
  margin-bottom: 2.5rem;
}

.description {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 75%;

}

footer {
  width: 100%;
  background-color: #cccccc;
  padding: 0;
  margin-top: 5rem;
}


h1 {
  font-size: 3rem;
  font-weight: 700;
  margin-top: 0;
  width: 100%;
}

h2, .headerlink, .headerlink:hover, .headerlink:active, .headerlink:visited, .headerlink::after {
  font-size: 3rem;
  letter-spacing: -0.02rem;
  font-weight: 400;
  margin: inherit;
  padding: inherit;
  cursor: pointer;  
  color: black;
  text-decoration: none;
  background: none;
  box-shadow: none;
}

h3 {
  color: black;
  font-family: 'IBM Plex Mono', monospace;
  font-size: 1.3rem;
  font-weight: 700;
  padding: 0 1rem 0 1rem;
}

p {
  width: 100%;
  font-size: 2.5rem;
  margin-top: 1.7rem;
  margin-bottom: 1.7rem;
}

a {
  color: blue;
  text-decoration: none;
  font-weight: 700;
  font-size: 2.5rem;  
  box-shadow: inset 0 -0.4rem 0 0 blue;
  transition: box-shadow 0.1s;
}

a:hover {
  color: blue; 
  box-shadow: inset 0 0 0 0 blue;  
  transition: box-shadow 0s;
}

figure {
  width: 80vw;
  padding: 0;
  margin: 0;
}

ul {
  line-height: 3.5rem;
  padding-left: 0;
  list-style-type: none;
}

img {
  width: 100%;
  margin: 0;
  -webkit-box-shadow: 0px 0px 6px 1px #ccc;
  -moz-box-shadow: 0px 0px 6px 1px #ccc;
  box-shadow: 0px 0px 6px 1px #ccc;
}

.portrait {
  width: 40%;
  -webkit-box-shadow: 0px 0px 6px 1px #ccc;
  -moz-box-shadow: 0px 0px 6px 1px #ccc;
  box-shadow: 0px 0px 6px 1px #ccc;
}

.preview-all {
  width: 100%;
  display: inline-grid;
  grid-template-columns: auto 40rem 40rem 40rem auto;
  grid-template-rows: 44.4rem 44.4rem;
  grid-row-gap: 2rem;
  grid-column-gap: 2rem;
  margin-top: 3rem;
  margin-bottom: 3rem;
}

.preview-img {
  height: 40rem;
  width: auto;
  padding: 0;
  margin: 0;
  box-shadow: none;
}

.preview1 {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: inherit;
  height: inherit;
  grid-column: 2 / 3;  
  grid-row: 1 / 2;
  align-self: stretch;
  cursor: pointer;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  overflow: hidden;
  -webkit-box-shadow: 0px 0px 6px 1px #ccc;
  -moz-box-shadow: 0px 0px 6px 1px #ccc;
  box-shadow: 0px 0px 6px 1px #ccc;
}

.preview2 {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: inherit;
  height: inherit;
  grid-column: 3 / 4;  
  grid-row: 1 / 2;
  align-self: stretch;
  cursor: pointer;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  overflow: hidden;
  -webkit-box-shadow: 0px 0px 6px 1px #ccc;
  -moz-box-shadow: 0px 0px 6px 1px #ccc;
  box-shadow: 0px 0px 6px 1px #ccc;
}

.preview3 {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: inherit;
  height: inherit;
  grid-column: 4 / 5;  
  grid-row: 1 / 2;
  align-self: stretch;
  cursor: pointer;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  overflow: hidden;
  -webkit-box-shadow: 0px 0px 6px 1px #ccc;
  -moz-box-shadow: 0px 0px 6px 1px #ccc;
  box-shadow: 0px 0px 6px 1px #ccc;
}

.preview4 {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: inherit;
  height: inherit;
  grid-column: 2 / 3;  
  grid-row: 2 / 3;
  align-self: stretch;
  cursor: pointer;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  overflow: hidden;
  -webkit-box-shadow: 0px 0px 6px 1px #ccc;
  -moz-box-shadow: 0px 0px 6px 1px #ccc;
  box-shadow: 0px 0px 6px 1px #ccc;
}

.preview5 {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: inherit;
  height: inherit;
  grid-column: 3 / 4;  
  grid-row: 2 / 3;
  align-self: stretch;
  cursor: pointer;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  overflow: hidden;
  -webkit-box-shadow: 0px 0px 6px 1px #ccc;
  -moz-box-shadow: 0px 0px 6px 1px #ccc;
  box-shadow: 0px 0px 6px 1px #ccc;
}

nav {
  display: flex;
  font-size: 2rem;
  letter-spacing: -0.02rem;
}

button {
  font-family: 'hk_groteskregular', sans-serif;
  font-size: 3rem;
  letter-spacing: -0.02rem;
  font-weight: 400;
  background-color: white;
  border: solid white 1px;
  border-radius: 10px;
  padding: 1rem 1.5rem 1rem 1.5rem;
  cursor: pointer;
  background: none;
}

.buttonlink, .buttonlink::after, .buttonlink:active, .buttonlink:hover, .buttonlink:hover::after, .buttonlink:visited {
  font-size: 3rem;
  letter-spacing: -0.02rem;
  font-weight: 400;
  margin: inherit;
  padding: inherit;
  cursor: pointer;  
  color: black;
  text-decoration: none;
  background: none;
  box-shadow: none;
}

.one {
   background-color: rgba(0, 0, 255, 1);
}

.two {
background-color: rgba(0, 0, 255, 0.7);
}

.three {
background-color: rgba(0, 0, 255, 0.5);
}

.four {
background-color: rgba(0, 0, 255, 0.2);
}

.five {
background-color: rgba(255, 255, 255, 1);
}

.six {
background-color: rgba(255, 0, 0, 0.2);
}

.seven {
background-color: rgba(255, 0, 0, 0.4);
}

.eight {
background-color: rgba(255, 0, 0, 0.6);
}

.nine {
background-color: rgba(255, 0, 0, 0.8);
}

.ten {
background-color: rgba(255, 0, 0, 1);
}

.eleven {
background-color: rgba(255, 0, 0, 0.7);
}

.twelve {
background-color: rgba(255, 0, 255, 0.7);
}

.github {
  box-shadow: inset 0 0 0 0 blue;
}


@media only screen and (max-width: 1300px) {

.preview-all {
  grid-template-columns: auto 45rem 45rem auto;
  grid-template-rows: 44.4rem 44.4rem 44.4rem;
}

  .preview1 {
  grid-column: 2 / 3;  
  grid-row: 1 / 2;
}

.preview2 {
  grid-column: 3 / 4;  
  grid-row: 1 / 2;
}

.preview3 {
  grid-column: 2 / 3;  
  grid-row: 2 / 3;
}

.preview4 {
  grid-column: 3 / 4;  
  grid-row: 2 / 3;
}

.preview5 {
  grid-column: 2 / 3;  
  grid-row: 3 / 4;
}



}




@media only screen and (max-width: 1000px) {

 article {
    width: auto;
    margin-left: 2rem;
    margin-right: 2rem;
  }

  img {
    width: 100%;
  }

  .preview-img {
  width: 100%;
  height: auto;
  }

  p {
    width: 100%;
  }

  .description {
    width: 100%;
  }

  figure {
    width: 100%;
  }

  .preview-all {
  width: 100%;
  display: inline-grid;
  grid-template-columns: 1rem auto 1rem;
  grid-template-rows: 50rem 50rem 50rem 50rem 50rem;
  grid-row-gap: 4rem;
  grid-column-gap: 1rem;
  margin-top: 0;
}

  .preview1 {
    display: flex;
    justify-content: center;
    height: 100%;
    width: auto;
    grid-column: 2 / 3;  
    grid-row: 1 / 2;
    justify-self: center;
    align-self: start;
  }

  .preview2 {
    display: flex;
    justify-content: center;
    height: 100%;
    width: auto;
    grid-column: 2 / 3;  
    grid-row: 2 / 3;
    justify-self: center;
    align-self: start;
  }

  .preview3 {
    display: flex;
    justify-content: center;
    height: 100%;
    width: auto;
    grid-column: 2 / 3;  
    grid-row: 3 / 4;
    justify-self: center;
    align-self: start;
  }

    .preview4 {
    display: flex;
    justify-content: center;
    height: 100%;
    width: auto;
    grid-column: 2 / 3;  
    grid-row: 4 / 5;
    justify-self: center;
    align-self: start;
  }

    .preview5 {
    display: flex;
    justify-content: center;
    height: 100%;
    width: auto;
    grid-column: 2 / 3;  
    grid-row: 5 / 6;
    justify-self: center;
    align-self: start;
  }

  .portrait {
    width: 100%;
  }

}

